--- a/src/LucasTecnologiaServices.Infrastructure/LucasTecnologiaServices.Infrastructure.csproj
+++ b/src/LucasTecnologiaServices.Infrastructure/LucasTecnologiaServices.Infrastructure.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
