--- a/src/LucasTecnologiaServices.Infrastructure/LucasTecnologiaServices.Infrastructure.csproj
+++ b/src/LucasTecnologiaServices.Infrastructure/LucasTecnologiaServices.Infrastructure.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
+    <PackageReference Include="ncrontab" Version="3.3.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
