--- a/src/Modules/LucasTecnologiaServices.Modules.Core/LucasTecnologiaServices.Modules.Core.csproj
+++ b/src/Modules/LucasTecnologiaServices.Modules.Core/LucasTecnologiaServices.Modules.Core.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\LucasTecnologiaServices.Infrastructure\LucasTecnologiaServices.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
