--- a/src/LucasTecnologiaServices.Infrastructure/LucasTecnologiaServices.Infrastructure.csproj
+++ b/src/LucasTecnologiaServices.Infrastructure/LucasTecnologiaServices.Infrastructure.csproj
@@ -5,6 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
