--- a/src/Modules/LucasTecnologiaServices.Modules.Catalog/LucasTecnologiaServices.Modules.Catalog.csproj
+++ b/src/Modules/LucasTecnologiaServices.Modules.Catalog/LucasTecnologiaServices.Modules.Catalog.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\LucasTecnologiaServices.Infrastructure\LucasTecnologiaServices.Infrastructure.csproj" />
+    <ProjectReference Include="..\LucasTecnologiaServices.Modules.Core\LucasTecnologiaServices.Modules.Core.csproj" />
+  </ItemGroup>
+
 </Project>
