--- a/max-super-pipeline.yaml
+++ b/max-super-pipeline.yaml
@@ -142,3 +142,21 @@ jobs:
     inputs:
       codeCoverageTool: Cobertura
       summaryFileLocation: $(Build.SourcesDirectory)/coverlet/reports/Cobertura.xml  
+  - task: ArchiveFiles@2
+    inputs:
+      rootFolderOrFile: '$(Build.BinariesDirectory)'
+      includeRootFolder: true
+      archiveType: 'zip'
+      archiveFile: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
+      replaceExistingArchive: true
+  - task: AzureRmWebAppDeployment@4
+    inputs:
+      ConnectionType: 'AzureRM'
+      azureSubscription: 'Azure subscription 1 (db403d7d-87b6-4d8f-99d1-187107ee4936)'
+      appType: 'webAppLinux'
+      WebAppName: 'lucastecnologiaservices'
+      deployToSlotOrASE: true
+      ResourceGroupName: 'DefaultResourceGroup-CUS'
+      SlotName: 'development'
+      packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
+      RuntimeStack: 'DOTNETCORE|5.0'
