--- a/test/Tax/LucasTecnologiaServices.Modules.Tax.Tests/LucasTecnologiaServices.Modules.Tax.Tests.csproj
+++ b/test/Tax/LucasTecnologiaServices.Modules.Tax.Tests/LucasTecnologiaServices.Modules.Tax.Tests.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\src\Modules\LucasTecnologiaServices.Modules.ServiceDesk\LucasTecnologiaServices.Modules.ServiceDesk.csproj" />
+    <ProjectReference Include="..\..\..\src\Modules\LucasTecnologiaServices.Modules.Tax\LucasTecnologiaServices.Modules.Tax.csproj" />
   </ItemGroup>
 
 </Project>
