--- a/src/Modules/LucasTecnologiaServices.Modules.Catalog/LucasTecnologiaServices.Modules.Catalog.csproj
+++ b/src/Modules/LucasTecnologiaServices.Modules.Catalog/LucasTecnologiaServices.Modules.Catalog.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\LucasTecnologiaServices.Infrastructure\LucasTecnologiaServices.Infrastructure.csproj" />
     <ProjectReference Include="..\LucasTecnologiaServices.Modules.Core\LucasTecnologiaServices.Modules.Core.csproj" />
+    <ProjectReference Include="..\LucasTecnologiaServices.Modules.Tax\LucasTecnologiaServices.Modules.Tax.csproj" />
   </ItemGroup>
 
 </Project>
