--- a/src/Modules/LucasTecnologiaServices.Modules.Core/LucasTecnologiaServices.Modules.Core.csproj
+++ b/src/Modules/LucasTecnologiaServices.Modules.Core/LucasTecnologiaServices.Modules.Core.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\..\LucasTecnologiaServices.Infrastructure\LucasTecnologiaServices.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="9.0.0" />
+  </ItemGroup>
+
 </Project>
