--- a/src/Modules/LucasTecnologiaServices.Modules.Core/LucasTecnologiaServices.Modules.Core.csproj
+++ b/src/Modules/LucasTecnologiaServices.Modules.Core/LucasTecnologiaServices.Modules.Core.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
   </ItemGroup>
 
 </Project>
