--- a/src/Modules/LucasTecnologiaServices.Modules.ActivityLog/LucasTecnologiaServices.Modules.ActivityLog.csproj
+++ b/src/Modules/LucasTecnologiaServices.Modules.ActivityLog/LucasTecnologiaServices.Modules.ActivityLog.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\..\LucasTecnologiaServices.Infrastructure\LucasTecnologiaServices.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\admin\" />
+  </ItemGroup>
+
 </Project>
