--- a/src/Modules/LucasTecnologiaServices.Modules.Core/LucasTecnologiaServices.Modules.Core.csproj
+++ b/src/Modules/LucasTecnologiaServices.Modules.Core/LucasTecnologiaServices.Modules.Core.csproj
@@ -10,7 +10,10 @@
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="9.0.0" />
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
   </ItemGroup>
 
