feat(#262)? implementandi classes de Components do microservico Core

--- a/src/Modules/LucasTecnologiaServices.Modules.ActivityLog/LucasTecnologiaServices.Modules.ActivityLog.csproj
+++ b/src/Modules/LucasTecnologiaServices.Modules.ActivityLog/LucasTecnologiaServices.Modules.ActivityLog.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\LucasTecnologiaServices.Infrastructure\LucasTecnologiaServices.Infrastructure.csproj" />
+    <ProjectReference Include="..\LucasTecnologiaServices.Modules.Core\LucasTecnologiaServices.Modules.Core.csproj" />
   </ItemGroup>
 
   <ItemGroup>
