--- a/src/Modules/LucasTecnologiaServices.Modules.Core/LucasTecnologiaServices.Modules.Core.csproj
+++ b/src/Modules/LucasTecnologiaServices.Modules.Core/LucasTecnologiaServices.Modules.Core.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="5.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.8" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="5.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.2" />
   </ItemGroup>
 
 </Project>
