feat(#263): implementing API basic structure

--- a/source/Services/Core/LucasTechnologyServices.Services.Api/LucasTechnologyServices.Services.Api.csproj
+++ b/source/Services/Core/LucasTechnologyServices.Services.Api/LucasTechnologyServices.Services.Api.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Infrastructure\LucasTechnologyService.Infrastructure\LucasTechnologyService.Infrastructure.csproj" />
     <ProjectReference Include="..\..\..\Modules\LucasTechnologyServices.Module.Core\LucasTechnologyServices.Module.Core.csproj" />
   </ItemGroup>
 
