fet(#498): implementing TypeHelper class into Helpers modulo in Infrastruture Project

--- a/source/Modules/LucasTechnologyServices.Module.Core/LucasTechnologyServices.Module.Core.csproj
+++ b/source/Modules/LucasTechnologyServices.Module.Core/LucasTechnologyServices.Module.Core.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Infrastructure\LucasTechnologyService.Infrastructure\LucasTechnologyService.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
