--- a/source/Modules/LucasTechnologyServices.Module.Core/LucasTechnologyServices.Module.Core.csproj
+++ b/source/Modules/LucasTechnologyServices.Module.Core/LucasTechnologyServices.Module.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidator" Version="2.0.4" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
