--- a/Express Store- DMS002/azure-pipelines-exs.yml
+++ b/Express Store- DMS002/azure-pipelines-exs.yml
@@ -16,7 +16,7 @@ jobs:
     inputs:
       packageType: 'sdk'
       version: '5.0.100'
-  - script: dotnet build ./SimplCommerce.sln
+  - script: dotnet build ./Express Store-DMS002/SimplCommerce.sln
     displayName: 'dotnet build'
   - task: DotNetCoreCLI@2
     displayName: 'run tests'
@@ -48,14 +48,14 @@ jobs:
     inputs:
       packageType: 'sdk'
       version: '5.0.100'
-  - script: dotnet build ./SimplCommerce.sln
+  - script: dotnet build ./Express Store-DMS002/SimplCommerce.sln
     displayName: 'dotnet build'
   - task: DotNetCoreCLI@2
     displayName: 'run tests'
     inputs:
       command: test
       arguments:  '--logger trx /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:Exclude=[xunit.*]*%2c[System.*]*'
-      projects: 'test/**/*.csproj'
+      projects: 'Express Sore=DMS002/test/**/*.csproj'
       nobuild: true
   - task: DotNetCoreCLI@2
     inputs:
@@ -86,7 +86,7 @@ jobs:
       command: 'restore'
       projects: '**/*/*.csproj'
       includeNuGetOrg: true
-  - script: dotnet build ./SimplCommerce.sln
+  - script: dotnet build ./Express Store-DMS002/SimplCommerce.sln
     displayName: 'dotnet build'
   - task: DotNetCoreCLI@2
     displayName: 'run tests'
@@ -127,7 +127,7 @@ jobs:
     inputs:
       command: test
       arguments:  '--configuration $(buildConfiguration) --logger trx /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:Exclude=[xunit.*]*%2c[System.*]*'
-      projects: 'test/**/*.csproj'
+      projects: 'Express Store-DMS002/test/**/*.csproj'
       nobuild: true
   - task: DotNetCoreCLI@2
     inputs:
