--- a/ExpressStore- DMS002/azure-pipelines-exs.yml
+++ b/ExpressStore- DMS002/azure-pipelines-exs.yml
@@ -16,7 +16,7 @@ jobs:
     inputs:
       packageType: 'sdk'
       version: '5.0.100'
-  - script: dotnet build /ExpressStore-DMS002/SimplCommerce.sln
+  - script: dotnet build ./ExpressStore-DMS002/SimplCommerce.sln
     displayName: 'dotnet build'
   - task: DotNetCoreCLI@2
     displayName: 'run tests'
