--- a/frontend/LTS-Blazor/LTS.BLZ/azure-pipelines.yml
+++ b/frontend/LTS-Blazor/LTS.BLZ/azure-pipelines.yml
@@ -18,4 +18,13 @@ jobs:
       version: '5.0.100'
   - script: dotnet build ./frontend/LTS-Blazor/LTS.BLZ/LTS.BLZ.sln
     displayName: 'dotnet build'
+
+    
+  - task: DotNetCoreCLI@2
+    displayName: 'run tests'
+    inputs:
+      command: test
+      arguments:  '--logger trx /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:Exclude=[xunit.*]*%2c[System.*]*'
+      projects: 'frontend/LTS-Blazor/LTS.BLZ/testing/**/*.csproj'
+      nobuild: true
   
