--- a/frontend/LTS-Blazor/LTS.BLZ/azure-pipelines.yml
+++ b/frontend/LTS-Blazor/LTS.BLZ/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
-- fet/568
+- test/develop
 
 jobs:
 - job: Linux
