--- a/frontend/LTS-Tripe/azure-pipelines.yml
+++ b/frontend/LTS-Tripe/azure-pipelines.yml
@@ -4,7 +4,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
-- fet/5751
+- test/develop
 
 jobs:
 - job: Linux
