--- a/frontend/LTS-Tripe/tests/LTS.Erp.Server.Tests/LTS.Erp.Server.Tests.csproj
+++ b/frontend/LTS-Tripe/tests/LTS.Erp.Server.Tests/LTS.Erp.Server.Tests.csproj
@@ -1,14 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
+    <Nullable>enable</Nullable>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
-    <PackageReference Include="ReportGenerator" Version="4.8.13" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -21,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LTS.Erp\Shared\LTS.Erp.Shared.csproj" />
+    <ProjectReference Include="..\..\LTS.Erp\Server\LTS.Erp.Server.csproj" />
   </ItemGroup>
 
 </Project>
