feat(#578): implementing Models into Infrastructure Project

--- a/frontend/LTS-Tripe/LTS.Erp/Shared/LTS.Erp.Shared.csproj
+++ b/frontend/LTS-Tripe/LTS.Erp/Shared/LTS.Erp.Shared.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Infrastructure-Module\LTS.Erp.Infrastructure\LTS.Erp.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <SupportedPlatform Include="browser" />
   </ItemGroup>
 </Project>
