--- a/frontend/LTS-Tripe/azure-pipelines.yml
+++ b/frontend/LTS-Tripe/azure-pipelines.yml
@@ -34,7 +34,7 @@ jobs:
       custom: tool
       arguments: install --tool-path . dotnet-reportgenerator-globaltool
     displayName: Install ReportGenerator tool
-  - script: ./reportgenerator "-reports:$(Build.SourcesDirectory)/test/**/coverage.cobertura.xml" "-targetdir:$(Build.SourcesDirectory)/coverlet/reports" "-reporttypes:HtmlInline_AzurePipelines;Cobertura"
+  - script: ./reportgenerator "-reports:$(Build.SourcesDirectory)/frontend/LTS-Triple/tests/**/coverage.cobertura.xml" "-targetdir:$(Build.SourcesDirectory)/coverlet/reports" "-reporttypes:HtmlInline_AzurePipelines;Cobertura"
     displayName: Create reports
   - task: PublishCodeCoverageResults@1
     displayName: 'Publish code coverage'
