--- a/frontend/LTS-Tripe/tests/LTS.Erp.Service.Tests/LTS.Erp.Service.Tests.csproj
+++ b/frontend/LTS-Tripe/tests/LTS.Erp.Service.Tests/LTS.Erp.Service.Tests.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -7,10 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="coverlet.msbuild" Version="3.1.0">
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="ReportGenerator" Version="4.8.13" />
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -25,7 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\LTS.Erp\Infrastructure-Module\LTS.Erp.Infrastructure\LTS.Erp.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\LTS.Erp\Server\LTS.Erp.Server.csproj" />
   </ItemGroup>
 
 </Project>
