--- a/LTS/azure-pipelines.yml
+++ b/LTS/azure-pipelines.yml
@@ -4,12 +4,12 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core
 
 trigger:
-- develop
+- test/linux
 
 jobs:
 - job: Linux
   pool:
-    vmImage: 'ubuntu-18.04'
+    vmImage: 'omx'
   steps:
   - task: UseDotNet@2
     displayName: 'Use .NET Core sdk'
@@ -41,47 +41,10 @@ jobs:
 
 
 
-- job: Windows
-  pool:
-    vmImage: 'windows-2019'
-  steps:
-  - task: UseDotNet@2
-    displayName: 'Use .NET Core sdk'
-    inputs:
-      packageType: 'sdk'
-      version: '5.0.100'
-  - task: DotNetCoreCLI@2
-    displayName: 'Restoring code using dotnet restore'
-    inputs: 
-      command: 'restore'
-      projects: 'LTS/**/*/*.csproj'
-      includeNuGetOrg: true
-  - script: dotnet build ./LTS/source/LucasTechnologyServices.sln
-    displayName: 'dotnet build'
-  - task: DotNetCoreCLI@2
-    displayName: 'run tests'
-    inputs:
-      command: test
-      arguments:  '--logger trx /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:Exclude=[xunit.*]*%2c[System.*]*'
-      projects: 'LTS/test/**/*.csproj'
-      nobuild: true
-  - task: DotNetCoreCLI@2
-    inputs:
-      command: custom
-      custom: tool
-      arguments: install --tool-path . dotnet-reportgenerator-globaltool
-      displayName: Install ReportGenerator tool
-  - script: .\reportgenerator -reports:$(Build.SourcesDirectory)/LTS/test/**/coverage.cobertura.xml -targetdir:$(Build.SourcesDirectory)\coverlet\reports -reporttypes:"HtmlInline_AzurePipelines;Cobertura"
-    displayName: Create reports 
-  - task: PublishCodeCoverageResults@1
-    displayName: 'Publish code coverage'
-    inputs:
-      codeCoverageTool: Cobertura
-      summaryFileLocation: $(Build.SourcesDirectory)/coverlet/reports/Cobertura.xml  
 
 - job: LinuxRelease
   pool:
-    vmImage: 'ubuntu-18.04'
+    vmImage: 'omx'
   variables:
     buildConfiguration: 'Release'
   steps:
