--- a/LTS/azure-pipelines.yml
+++ b/LTS/azure-pipelines.yml
@@ -11,7 +11,7 @@ jobs:
 
 - job: Windows
   pool:
-    vmImage: 'a001'
+    vmImage: 'windows-2019'
   steps:
   - task: UseDotNet@2
     displayName: 'Use .NET Core sdk'
