--- a/source/Modules/LucasTechnologyServices.Module.Core/LucasTechnologyServices.Module.Core.csproj
+++ b/source/Modules/LucasTechnologyServices.Module.Core/LucasTechnologyServices.Module.Core.csproj
@@ -1,8 +1,14 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Compile Remove="Areas\**" />
+    <EmbeddedResource Remove="Areas\**" />
+    <None Remove="Areas\**" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="FluentValidator" Version="2.0.4" />
@@ -11,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\Application\Core\LucasTechnologyServices.AppService.Core\LucasTechnologyServices.AppService.Core.csproj" />
     <ProjectReference Include="..\..\Infrastructure\LucasTechnologyService.Infrastructure\LucasTechnologyService.Infrastructure.csproj" />
   </ItemGroup>
 
