"feat(#266)Ç implementing Account vand Manage iew Models "

--- a/source/Application/Core/LucasTechnologyServices.AppService.Core/LucasTechnologyServices.AppService.Core.csproj
+++ b/source/Application/Core/LucasTechnologyServices.AppService.Core/LucasTechnologyServices.AppService.Core.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\..\Infrastructure\LucasTechnologyService.Infrastructure\LucasTechnologyService.Infrastructure.csproj" />
     <ProjectReference Include="..\..\..\WebAPIs\LucasTechnologyServices.WebAPI.Core\LucasTechnologyServices.WebAPI.Core.csproj" />
   </ItemGroup>
 
