--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -7,37 +7,19 @@ on:
     branches: [ dev ]
 
 jobs:
-  - job: Linux
-    pool:
-      vmImage: 'ubuntu-latest'
+  build:
+
+    runs-on: ubuntu-latest
+
     steps:
-    - task: UseDotNet@2
-      displayName: 'Use .NET Core sdk'
-      inputs:
-        packageType: 'sdk'
-        version: '5.0.100'
-    - script: dotnet build ./LucasTechnologyServices.sln
-      displayName: 'dotnet build'
-    - task: DotNetCoreCLI@2
-      displayName: 'run tests'
-      inputs:
-        command: test
-        arguments:  '--logger trx /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:Exclude=[xunit.*]*%2c[System.*]*'
-        projects: 'test/**/*.csproj'
-        nobuild: true
-    - task: DotNetCoreCLI@2
-      inputs:
-        command: custom
-        custom: tool
-        arguments: install --tool-path . dotnet-reportgenerator-globaltool
-      displayName: Install ReportGenerator tool
-    
-    - task: PublishCodeCoverageResults@1
-      displayName: 'Publish code coverage'
-      inputs:
-        codeCoverageTool: Cobertura
-        summaryFileLocation: $(Build.SourcesDirectory)/coverlet/reports/Cobertura.xml  
-  
-  
-  
-  
+    - uses: actions/checkout@v2
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v1
+      with:
+        dotnet-version: 5.0.x
+    - name: Restore dependencies
+      run: dotnet restore
+    - name: Build
+      run: dotnet build ./LucasTechnologyServices.sln
+    - name: Test
+      run: dotnet test test/**/*.csproj
