--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -22,4 +22,6 @@ jobs:
     - name: Build
       run: dotnet build ./LucasTechnologyServices.sln
     - name: Test
-      run: dotnet test test/**/*.csproj
+      run: dotnet test '--logger trx /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:Exclude=[xunit.*]*%2c[System.*]*'
+   
+      
