--- a/source-micro-frontend/Financial/lts-erp-financial/package.json
+++ b/source-micro-frontend/Financial/lts-erp-financial/package.json
@@ -18,8 +18,11 @@
     "@ionic/vue": "^5.4.0",
     "@ionic/vue-router": "^5.4.0",
     "core-js": "^3.6.5",
+    "jquery": "^3.6.0",
+    "popper.js": "^1.16.1",
     "vue": "^3.2.1",
-    "vue-router": "^4.0.0-0"
+    "vue-router": "^4.0.0-0",
+    "vue-stripe-elements-plus": "^1.0.2"
   },
   "devDependencies": {
     "@capacitor/cli": "3.3.1",
@@ -39,7 +42,7 @@
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^7.0.0-0",
     "typescript": "^4.3.5",
-    "vue-jest": "^5.0.0-0",
+    "vue-jest": "^5.0.0-alpha.10",
     "vue-loader-v16": "npm:vue-loader@^16.1.0"
   },
   "description": "An Ionic project"
