fet(#25): implementing App Services interfaces into Core Application

--- a/source/Application/Core/LucasTechnologyServices.AppService.Core/LucasTechnologyServices.AppService.Core.csproj
+++ b/source/Application/Core/LucasTechnologyServices.AppService.Core/LucasTechnologyServices.AppService.Core.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\..\WebAPIs\LucasTechnologyServices.WebAPI.Core\LucasTechnologyServices.WebAPI.Core.csproj" />
+    <ProjectReference Include="..\..\..\Infrastructure\LucasTechnologyService.Infrastructure\LucasTechnologyService.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
